# adventofcode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2024/: Cargo.toml
2025/: 1.go  go.mod
2025/10/: 10.go  10.py
2025/11/: 11.go
2025/12/: 12.go
2025/12_bad/: 12_bad.go
2025/2/: 2.go
2025/3/: 3.go
2025/4/: 4.go
2025/5/: 5.go
2025/6/: 6.go
2025/7/: 7.go
2025/8/: 8.go
2025/9/: 9.go  9_test.go
