[package]
name = "twenty-twenty-four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2"
code-timing-macros = "0.0"
regex = "1.11"
lazy_static = "1.5.0"
diagonal = "0.1.0"
ndarray = "0.16.1"
prime_factorization = "1.0.5"
nalgebra = "0.33.2"
itertools = "0.13.0"
rand = "0.8.5"
